udpated datum and uid git hub source to forcked repos under 1xtel

--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,9 @@
 {cover_enabled, true}.
 
 {deps, [
-   datum,
    {pipe, "2.0.1", {pkg, pipes}},
-   uid
+   {datum, {git, "git@github.com:1xtel/datum.git", {branch,"master"}}},
+   {uid,   {git, "git@github.com:1xtel/uid.git",   {branch,"master"}}},
 ]}.
 
 %%
