udpated datum and uid git hub source to forcked repos under 1xtel

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 {deps, [
    {pipe, "2.0.1", {pkg, pipes}},
    {datum, {git, "git@github.com:1xtel/datum.git", {branch,"master"}}},
-   {uid,   {git, "git@github.com:1xtel/uid.git",   {branch,"master"}}},
+   {uid,   {git, "git@github.com:1xtel/uid.git",   {branch,"master"}}}
 ]}.
 
 %%
