updated git dependenacy

--- a/rebar.config
+++ b/rebar.config
@@ -4,8 +4,8 @@
 
 {deps, [
    {pipe, "2.0.1", {pkg, pipes}},
-   {datum, {git, "git@github.com:1xtel/datum.git", {branch,"master"}}},
-   {uid,   {git, "git@github.com:1xtel/uid.git",   {branch,"master"}}}
+   {datum, {git, "https://github.com/1xtel/datum.git", {branch,"master"}}},
+   {uid,   {git, "https://github.com/1xtel/uid.git",   {branch,"master"}}}
 ]}.
 
 %%
